# alpr

./: pyproject.toml
src/: constatns.py  data_loaders.py  models.py  train.py
