[tool.poetry]
name = "lpr"
version = "0.1.0"
description = ""
authors = ["ozora-ogino <ozora.ogino.1127@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
tensorflow = "^2.8.0"
opencv-python = "^4.5.5"
torch = "^1.11.0"
torchvision = "^0.12.0"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]
pylint = "^2.13.8"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
